Fixed an issue where the header only had 15px of spacing instead of 30
- Fix required reducing some of the spacing between language and nav items at 901px

--- a/cfgov/unprocessed/css/molecules/global-eyebrow.less
+++ b/cfgov/unprocessed/css/molecules/global-eyebrow.less
@@ -52,7 +52,7 @@
     font-size: unit( 12px / @base-font-size-px, em);
 
     &_tagline {
-        padding-left: 37px; //22px flag + 15px spacing
+        padding-left: 32px; //22px flag + 10px spacing
         background: url('/static/img/us-flag_22x13.png') no-repeat 0 0;
 
         .respond-to-dpi(2, {
@@ -71,16 +71,14 @@
 
     &_languages {
         display: inline;
-        list-style-type: none;
 
-        li {
-            display: inline-block;
-            margin-right: unit( @grid_gutter-width / 2 / @base-font-size-px, em );
+        .list_item:not(:last-child) {
+            margin-right: unit( 7px / 12px, em );
             margin-bottom: 0;
 
-            &:last-child {
-                margin-right: 0;
-            }
+            .respond-to-min( @bp-lg-min, {
+                margin-right: unit( 10px / 12px, em );
+            } );
         }
 
         a {
@@ -93,7 +91,8 @@
     }
 
     &__horizontal {
-        padding: unit( @grid_gutter-width / 3 / @base-font-size-px, em );
+        padding-top: unit( @grid_gutter-width / 3 / @base-font-size-px, em );
+        padding-bottom: unit( @grid_gutter-width / 3 / @base-font-size-px, em );
         background: @gray-5;
         border-bottom: 1px solid @gray-40;
 
@@ -127,7 +126,7 @@
         .m-global-eyebrow_phone,
         .m-global-eyebrow_languages {
           display: block;
-          padding-left: 37px; //22px flag + 15px spacing
+          padding-left: 32px; //22px flag + 15px spacing
         }
     }
 }
